FLUID-4023: Demoing the fl-fix overflow issue
Added some convoluted styling to demonstrate the scrollbar that can get added with fl-fix do to the overflow setting.

--- a/src/webapp/tests/manual-tests/css/fl-fix.css
+++ b/src/webapp/tests/manual-tests/css/fl-fix.css
@@ -1,6 +1,7 @@
 strong {
     display: block;
     margin: 4px;
+    margin-right: -4px;
 }
 
 .container {
